# afiQA

./: .env.example  404.html  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
React/: README.md  index.html  package-lock.json  package.json  vite.config.ts
React/public/: 404.html
React/src/: App.tsx  index.css
React/src/hooks/: useCart.ts  useFanatic.ts  useHome.ts  useProfile.ts  useQuizQuestion.ts  useQuizzes.ts  useRanking.ts  useShopGroups.ts  useShopProducts.ts  useSubmitQuiz.ts
React/src/lib/: auth.ts  fanaticApi.ts
React/src/pages/: Fanatic.tsx  Home.tsx  Login.test.tsx  Login.tsx  MyProfile.tsx  Quizzes.tsx  Ranking.tsx  Rooms.tsx  Shop.tsx  ShopProducts.tsx
React/src/services/: mockRoomGameFeed.ts  roomChat.ts  rooms.ts
Supabase/: .gitignore
Supabase/supabase/: config.toml  seed.sql
Supabase/supabase/migrations/: 20260312021238_remote_schema.sql  20260330183052_remote_schema.sql  20260403175724_remote_schema.sql  20260404220404_remote_schema.sql  20260407161950_remote_schema.sql  20260408153000_rooms_phase_1.sql
ThunderAI/: .env.example  .gitignore  main.py  pyproject.toml
ThunderAI/ai/: agent.py  ai_client.py  context.py
ThunderAI/api/: fastapi.py
ThunderAI/sb/: functions.py  supabase_client.py
assets/: index-1Ykljpci.js  index-B7WBLyui.js  index-BFf5WQf3.js  index-BxFXBD6U.js  index-CWedRZOa.js  index-CbK-W1sa.js  index-Ctx7fwmG.css  index-DGdYK89Y.js  index-DJ9qisXe.js  index-QScD4mdL.js  index-rcFyRJFh.js
src/: App.tsx
src/hooks/: useFanatic.ts
src/lib/: fanaticApi.ts
src/pages/: Fanatic.tsx
(+29 files in other folders)
